# SolixBLEF2000

./: LICENSE.txt  README.md  SolixBLE.py  pyproject.toml  requirements_dev.txt  test_SolixBLE.py
.github/workflows/: pytest.yml
SolixBLE/: __init__.py  const.py  device.py  prime_device.py  states.py
SolixBLE/devices/: __init__.py  c1000.py  c1000g2.py  c300.py  c300dc.py  c800.py  f2600.py  prime_power_bank_20k.py  solarbank2.py
docs/: requirements.txt
docs/source/: api.rst  app_decoding.rst  c1000g2.rst  f2600.rst  index.rst  new_devices.rst
examples/: control.py  demo.py
scripts/: frida.js
tests/: const.py  test_connection.py  test_devices.py  test_prime.py
