[project]
name = "SolixBLE"
version = "3.7.0"
dependencies = [
  "bleak>=0.19.0",
  "cryptography",
  "pycryptodome",
  "bleak-retry-connector"
]
requires-python = ">= 3.11"
authors = [
  { name="Harvey Lelliott", email="harveylelliott@duck.com" },
]
description = "Python module for monitoring & controlling Bluetooth Anker Solix devices"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Anker", "Solix", "BLE", "Home Assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/flip-dots/SolixBLE"
Documentation = "https://solixble.readthedocs.io/en/latest/"
Repository = "https://github.com/flip-dots/SolixBLE"
Issues = "https://github.com/flip-dots/SolixBLE/issues"